fixed the sponsor page on mobile

--- a/src/styles/sponsors.css
+++ b/src/styles/sponsors.css
@@ -64,7 +64,7 @@
 
 .uber {
     width:15%;
-    height:30%;
+    height:25%;
 }
 
 .ey {
@@ -78,8 +78,8 @@
 }
 
 .logo {
-    max-width:40%;
-    max-height:40%;
+    max-width:20%;
+    max-height:20%;
     text-align: center;
     position: static;
 
